--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;900&display=swap');
+body{
+    font-family: 'Inter', sans-serif;
+}
 .hero{
     background: url('https://i.ibb.co/wRXmvzd/Rectangle-4281.png');
+}
+.active{
+    color: #FF444A !important;
 }
